--- a/JRTP701-MiniProj02-ReportAPII/src/main/resources/application.properties
+++ b/JRTP701-MiniProj02-ReportAPII/src/main/resources/application.properties
@@ -1,1 +1,25 @@
 spring.application.name=JRTP701-MiniProj02-ReportAPII
+
+#====Oracle Database=========
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:ORCL
+spring.datasource.username=system
+spring.datasource.password=1234
+
+#HikariCP Datasource
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.idle-timeout=300000
+spring.datasource.hikari.max-lifetime=1800000
+
+#Optional: Hibernate dialect (useful for fine-tuning SQL generation)
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
+spring.datasource.initialization-mode=always
+
+spring.jpa.show-sql=true 
+spring.jpa.hibernate.ddl-auto=update 
+
+server.port=4042
+
+# Run schema.sql & data.sql on startup
+spring.sql.init.mode=always
